[package]
name = "cargo-cleans"
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/luyikk/cleans"
license = "MIT/Apache-2.0"
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
keywords = ["cargo-plugins", "cargo-clean", "cargo", "clean","cleans"]
description = "A cargo subcommand cleans all projects under a specified directory with high performance."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1" , features= ["full"] }
clap = { version="3" , features= ["derive"] }
bytefmt = "0.1"
chrono ="0.4"
remove_dir_all = "0.7"
async-recursion = "1.0.0"
async-trait = "0.1"
aqueue = "1"
anyhow = "1"
